 o 'shape' can now be set to 'rectangle'
 o Added 'vsize2' argument to control the vertical size of nodes if shape is 'rectangle'.
 o Multiple edges between nodes are now curved uniquely for each edge by default.

Changes in Version 1.1.1-11
	o non-finite weights are now set to zero and omitted
  o the midpoint of curved edges is now set using the inner function PerpMid. This function now consistintly finds a midpoint perpandicular to the edge regardless of shape of the plot in inches.
  o The 'curve' argument now scales the distance between the midpoint of an edge and the midpoint of the curved edge proportional 2.5% of the diagonal size of the plot in inche

Changes in Version 1.1.1-10
	o Fixed a bug where bidirectional edges where plotted twice
  o 'curveAll' argument added.

Changes in Version 1.1.1-9
	o Added 'label.prop' argument to control the relative width of labels to the width of nodes
	o Improved the scaling algorithm of the labels. Labels now scale properly to 75% of the width of a node.
	o Labels are no longer coerced to characters, this means that expressions can now also be used for labels
	o Added 'label.cex' argument to scale the node labels

Changes in Version 1.1.1-8
	o Fixed a bug where edhe labels caused an error if all edge weights are zero

Changes in Version 1.1.1-7
	o larger nodes are now plotted on top of larger nodes.
	o Borders are now plotted at the same level als node colors. This means borders will no longer overlap overlapping nodes. Labels will still overlap overlapping nodes to increase readability
	o Added 'border.width' argument to control the border width.

Changes in Version 1.1.1-6
	o 'color' can now be assigned 'background', which will transfer the background color to the node. This is now the default
	o Edge ends are now replaced if the node is partly transparant, which is no longer based on vTrans

Changes in Version 1.1.1-5