@@ -3,6 +3,7 @@ Changes in Version 1.1.1-12
  o 'shape' can now be set to 'rectangle'
  o Added 'vsize2' argument to control the vertical size of nodes if shape is 'rectangle'.
  o Multiple edges between nodes are now curved uniquely for each edge by default.
+ o Added 'curveDefault' argument and some changes to 'curve' argument. 'curveDefault' now controls the default curvature (1 by default). If 'curve' is NA the defautl curvature is used (curved edges if there are multiple edges between two nodes). If 'curve' is of length 1 it overwrites 'curveDefault' for backward compatibility.
 
 Changes in Version 1.1.1-11
 	o non-finite weights are now set to zero and omitted
